@@ -2,6 +2,10 @@
     comments, ignore them completely.
   * ssl_io.c, man/sslio.8: support env variable SSLIO_BAD_CERTIFICATE to
     optionally accept 'bad certificate's (thx Nikola Vladov).
+  * ssl_io.c, man/sslio.8, man/sslsvd.8: support env variable
+    SSL_HANDSHAKE_TIMEOUT to disconnect a client if the ssl handshake
+    isn't completed within some number of seconds (thx Nikola Vladov);
+    add ENVIRONMENT section to man/sslsvd.8.
 
 ipsvd 0.12.1
 Sat, 04 Feb 2006 19:14:23 +0000
